[gd_scene load_steps=7 format=2]

[ext_resource path="res://media/rgb.png" type="Texture" id=1]
[ext_resource path="res://media/font.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://fonts/text14.tres" type="DynamicFont" id=3]
[ext_resource path="res://scripts/Title.gd" type="Script" id=4]
[ext_resource path="res://media/Title.mp3" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[node name="Title" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="Splash" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )

[node name="StartWorld1" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -303.0
margin_top = 100.0
margin_right = -138.0
margin_bottom = 133.0
custom_fonts/font = ExtResource( 3 )
text = "Level 1"

[node name="StartWorld2" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -82.5
margin_top = -200.0
margin_right = 82.5
margin_bottom = -167.0
custom_fonts/font = ExtResource( 3 )
text = "Level 2"

[node name="StartWorld3" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 138.0
margin_top = 100.0
margin_right = 303.0
margin_bottom = 133.0
custom_fonts/font = ExtResource( 3 )
text = "Level 3"

[node name="Sounds" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -196.0
margin_top = 180.0
margin_right = -31.0
margin_bottom = 213.0
custom_fonts/font = ExtResource( 3 )
text = "Sounds: ON"

[node name="Tutorial" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 34.0
margin_top = 180.0
margin_right = 199.0
margin_bottom = 213.0
custom_fonts/font = ExtResource( 3 )
text = "Tutorial"

[node name="Credits" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -216.5
margin_right = 160.0
margin_bottom = -199.5
custom_fonts/font = SubResource( 1 )
text = "PROTOTYPE GAME
Made for GE Jam #5 by Ikmal Said"
align = 1
valign = 1

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -65.0
margin_top = 45.0
margin_right = 65.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 3 )
text = "START PLAYING"
align = 1
valign = 1

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true

[connection signal="pressed" from="StartWorld1" to="." method="_on_StartWorld1_pressed"]
[connection signal="pressed" from="StartWorld2" to="." method="_on_StartWorld2_pressed"]
[connection signal="pressed" from="StartWorld3" to="." method="_on_StartWorld3_pressed"]
[connection signal="pressed" from="Sounds" to="." method="_on_Sounds_pressed"]
[connection signal="pressed" from="Tutorial" to="." method="_on_Tutorial_pressed"]
